Fixed spacing of all elements & small "buttons"
Added gifs for the lols

--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,20 @@
     box-sizing: border-box;
 }
 
+.catslol {
+  text-align: center;
+}
+
+.catslol img {
+  display: inline-block;
+  width: 100px;
+  margin-top: 30px;
+}
+
 h1 {
     display: block;
     margin: auto;
-    font-size: 50px;
+    font-size: 80px;
     margin-top: 100px;
     text-align: center;
 }
@@ -23,29 +33,68 @@ h1 {
   text-align: center;
 }
 
-.homebuttons a {
+a {
     display: inline-block;
+    margin-top: 10px;
     text-align: center;
-    width: 300px;
-    height: 75px;
+    text-decoration: none;
     background-color: #150c66;
     color: #eedfc2;
-    padding: 25px;
-    margin: 20px;
-    border-radius: 25px;
+    border-radius: 15px;
     font-weight: 600;
     letter-spacing: 0.5px;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
     background: linear-gradient(300deg, #4a3cff, #150c66);
 }
 
-.homebuttons a:hover {
+.homebuttons a {
+    width: 300px;
+    height: 75px;
+    padding: 25px;
+    margin: 20px;
+}
+
+.recipebuttons {
+    width: 75px;
+    height: 30px;
+    font-size: 15px;
+    padding: 5px;
+    margin-left: 5px;
+}
+
+a:hover {
     transform: translateY(-5px);
     background: linear-gradient(135deg, #150c66, black);
     box-shadow: 0px 10px 20px rgba(0,0,0,0.2);
 }
 
+.recipe-h1 {
+    font-size: 60px;
+    margin-top: 40px;
+    margin-bottom: 30px;
+}
 .recipe-img {
     display: block;
-    margin: 10px;
+    margin: 50px auto;
+}
+
+p, ul, ol {
+  max-width: 800px;
+  line-height: 1.7;
+  margin: 30px auto;
+  font-size: 16px;
+  text-align: justify;
+}
+
+li {
+  margin-bottom: 10px;
+}
+
+li:last-child {
+  margin-bottom: 0;
+}
+
+h2, h3 {
+    max-width: 800px;
+    margin: 30px auto;
 }
